{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 54,
  "lineage": "8b47d9a0-374d-7e94-06b2-658db106ece6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/networkInterfaces/mynic",
            "internal_domain_name_suffix": "mw5o3hzcxb3ublqt3lbcdzsgge.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "testconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/virtualNetworks/mynetwork/subnets/internal"
              }
            ],
            "location": "centralindia",
            "mac_address": "60-45-BD-AC-82-4E",
            "name": "mynic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "mytestg",
            "virtual_machine_id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Compute/virtualMachines/myvm"
          },
          "dependencies": [
            "azurerm_public_ip.myterraformpublicip",
            "azurerm_resource_group.myvmg",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "centralindia",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "mytestg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test1234",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.myvmg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mytestg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mysg",
            "azurerm_resource_group.myvmg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/test1234",
            "name": "test1234",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "mytestg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mysg",
            "azurerm_resource_group.myvmg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "myPublicIP",
            "resource_group_name": "mytestg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.myvmg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/virtualNetworks/mynetwork/subnets/internal",
            "name": "internal",
            "resource_group_name": "mytestg",
            "virtual_network_name": "mynetwork"
          },
          "dependencies": [
            "azurerm_resource_group.myvmg",
            "azurerm_virtual_network.myvpcnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myvpcnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9feebe65-b822-407b-ae13-eac221e64634",
            "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/virtualNetworks/mynetwork",
            "location": "centralindia",
            "name": "mynetwork",
            "resource_group_name": "mytestg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/65efc9a7-89df-42dd-ba5f-c854d571b854/resourceGroups/mytestg/providers/Microsoft.Network/virtualNetworks/mynetwork/subnets/internal",
                "name": "internal"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.myvmg"
          ]
        }
      ]
    }
  ]
}